web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-catch/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,31)
1|function *g() { try {} catch (yield) {} }
 |                             ^
